--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8" />
-    <title>Vaishnav Wakchaure | Portfolio Website | Developer</title>
+    <title>Anushka Kulkarni | Portfolio Website | Developer</title>
     <meta name="description" content="my description" />
-    <meta name="author" content="Vaishnav Wakchaure" />
+    <meta name="author" content="Anushka Kulkarni" />
 
     <meta
       name="keywords"
-      content="vaishnav, wakchaure, vaishnav wakchaure, developer, web developer, React developer"
+      content="anushka, kulkarni, anushka kulkarni, developer, web developer, Android developer"
     />
-    <meta name="subject" content="Vaishnav Wakchaure Portfolio" />
-    <meta name="copyright" content="Vaishnav Wakchaure" />
+    <meta name="subject" content="Anushka Kulkarni Portfolio" />
+    <meta name="copyright" content="Anushka Kulkarni" />
     <meta name="language" content="EN" />
     <meta name="robots" content="index, follow" />
     <meta name="revised" content="Thursday, December 12th, 2019, 1:04 am" />
-    <meta name="abstract" content="Vaishnav Wakchaure" />
-    <meta name="topic" content="Vaishnav Wakchaure portfolio" />
+    <meta name="abstract" content="Anushka Kulkarni" />
+    <meta name="topic" content="Anushka Kulkarni portfolio" />
     <meta
       name="summary"
-      content="This is Vaishnav Wakchaure's Portfolio Website who is a Developer and a YouTuber."
+      content="This is Anushka Kulkarni's Portfolio Website who is a Developer and a YouTuber."
     />
     <meta name="Classification" content="Business" />
-    <meta name="author" content="Vaishnav Wakchaure, alisolanki123@gmail.com" />
-    <meta name="designer" content="Vaishnav Wakchaure" />
-    <meta name="copyright" content="Vaishnav Wakchaure" />
-    <meta name="reply-to" content="vaishnav.wakchaure@gmail.com" />
-    <meta name="owner" content="Vaishnav Wakchaure" />
+    <meta name="author" content="Anushka Kulkarni, alisolanki123@gmail.com" />
+    <meta name="designer" content="Anushka Kulkarni" />
+    <meta name="copyright" content="Anushka Kulkarni" />
+    <meta name="reply-to" content="anushka.kulkarni1008@gmail.com" />
+    <meta name="owner" content="Anushka Kulkarni" />
     <meta name="url" content="" />
     <meta name="identifier-URL" content="" />
     <meta name="directory" content="submission" />
@@ -125,17 +125,17 @@
           <div class="col-twelve">
             <h5>Hello, World,</h5>
             <h1>
-              I<span style="color: #cc005f">'</span>m Vaishnav Wakchaure<span
+              I<span style="color: #cc005f">'</span>m Anushka Kulkarni<span
                 style="color: #cc005f"
                 >:)</span
               >
             </h1>
 
             <p class="intro-position">
-              <span>Full Stack Developer</span>
-              <span>MERN Stack</span>
+              <span>Android Developer</span>
+              <!-- <span>MERN Stack</span>
               <span>Gamer</span>
-			  <span>Treker</span>
+			  <span>Treker</span> -->
             </p>
 
             <a class="button stroke smoothscroll" href="#about" title=""
@@ -148,17 +148,17 @@
 
       <ul class="intro-social">
         <li>
-          <a href="https://www.linkedin.com/in/vaishnav-wakchaure/"
+          <a href="https://www.linkedin.com/in/anushka-kulkarni-5b3b1222b/"
             ><i class="fa fa-linkedin"></i
           ></a>
         </li>
         <li>
-          <a href="https://www.instagram.com/vaishnav.wakchaure"
+          <a href="https://www.instagram.com/anu_shka__kulkarni"
             ><i class="fa fa-instagram"></i
           ></a>
         </li>
         <li>
-          <a href="https://github.com/vaishnavw45"
+          <a href="https://github.com/AnushkaK20"
             ><i class="fa fa-github"></i
           ></a>
         </li>
@@ -178,7 +178,7 @@
           <h2>Let me introduce myself.</h2>
 
           <div class="intro-info">
-            <img src="images/photo.jpg" alt="Vaishnav Wakchaure Picture" />
+            <img src="images/Anu_Photo.jpg" alt="Anushka Kulkarni Picture" />
 
             <p class="lead">
               <!-- "Lad with a <font color="#FF0077">million</font> dreams." -->
@@ -194,44 +194,50 @@
         <div class="col-six tab-full">
           <h3>Profile</h3>
           <p>
-            🚀 A dynamic and driven Master's in Computer Applications (MCA)
-            candidate from MES Institute of Management and Career Courses, Pune
+            🚀 A dynamic and driven Graduation in Computer Applications (BCA)
+            candidate from New Arts commerce ans science college Ahilyanagar and I am currently pursuing an MCA (Master of Computer Applications), Ahilyanagar
             — consistently delivering academic excellence and a rock-solid
             foundation in tech.
+
+
+
+             <!-- A dynamic and driven Master's in Computer Applications (MCA)
+            candidate from MES Institute of Management and Career Courses, Pune
+            — consistently delivering academic excellence and a rock-solid
+            foundation in tech. -->
           </p>
 
           <p>
-            🔥 Backed by real-world experience in React Development and
-            Cybersecurity, I specialize in building robust web and mobile
-            applications. I bring to the table hands-on expertise in React.js,
-            Firebase, JavaScript, Java, Kotlin, Python, C++, and Node.js — with
-            a sharp eye for clean UI using Tailwind CSS and Bootstrap.
+            🔥I specialize in building robust web and mobile
+            applications. I bring to the table hands-on expertise in  Java, Kotlin, 
+            Firebase, SQLite, HTML, CSS and JavaScript — with
+            a sharp eye for clean UI using  Bootstrap.
           </p>
 
           <p>
             ⚙️ From creating immersive OTT platforms to Android apps rooted in
-            traditional Ayurveda, I merge innovation with impact. Comfortable
-            working with APIs, databases (MongoDB, MySQL), and cloud
-            technologies (Firebase, Azure, AWS), I thrive in solving problems,
+            traditional Predictor Clock and Netflix Clone, I merge innovation with impact. Comfortable
+            working with APIs, databases (SQLite, MySQL), and cloud
+            technologies (FirebaseS), I thrive in solving problems,
             scaling systems, and learning what’s next.
           </p>
 
           <ul class="info-list">
             <li>
               <strong>Fullname:</strong>
-              <span>Vaishnav Uttam Wakchaure</span>
+              <span>Anushka Pravin Kulkarni</span>
             </li>
             <li>
               <strong>Birth Date:</strong>
-              <span>March 30, 2003</span>
+              <span>December 14, 2002</span>
             </li>
             <li>
               <strong>Website:</strong>
-              <span><a href="#">https://github.com/vaishnavw45</a></span>
+              <span><a href="#">https://github.com/AnushkaK20</a></span>
             </li>
             <li>
               <strong>Email:</strong>
-              <span>vaishnav.wakchaure@gmail.com</span>
+              <span>anushka.kulkarni1008@gmail.com</span>
             </li>
           </ul>
           <!-- /info-list -->
@@ -252,36 +258,33 @@
           <ul class="skill-bars">
             <li>
               <!--                         <div class="progress percent95"><span>95%</span></div> -->
-              <strong>JavaScript</strong>
+              <strong>Kotlin</strong>
             </li>
             <li>
               <!--                         <div class="progress percent90"><span>90%</span></div> -->
-              <strong>React</strong>
-            </li>
-            <li>
-              <!--                         <div class="progress percent85"><span>90%</span></div> -->
-              <strong>Node JS</strong>
+              <strong>Core Java</strong>
             </li>
             <li>
               <!--                         <div class="progress percent75"><span>75%</span></div> -->
-              <strong>Python</strong>
+              <strong>Html</strong>
             </li>
             <li>
-              <!--                         <div class="progress percent75"><span>75%</span></div> -->
-              <strong>Java</strong>
+              <!--                         <div class="progress percent70"><span>70%</span></div> -->
+              <strong>CSS</strong>
+            </li>
+            <li>
+              <!--                         <div class="progress percent70"><span>70%</span></div> -->
+              <strong>JavaScript</strong>
             </li>
 
-            <li>
-              <!--                         <div class="progress percent75"><span>75%</span></div> -->
-              <strong>Java</strong>
-            </li>
+           
 			<li>
 				<!--                         <div class="progress percent75"><span>75%</span></div> -->
-				<strong>NoSql (MongoDB, Firebase)</strong>
+				<strong>SQLite(Firebase)</strong>
 			  </li>
 			  <li>
 				<!--                         <div class="progress percent75"><span>75%</span></div> -->
-				<strong>SQL</strong>
+				<strong>MySQL</strong>
 			  </li>
 			  <li>
 				<!--                         <div class="progress percent75"><span>75%</span></div> -->
@@ -298,9 +301,9 @@
             >Hire Me</a
           >
           <a
-            href="Vaishnav_Wakchaure.pdf"
+            href="Anushka_Kulkarni.pdf"
             title="Download Resume"
-			download="Vaishnav_Wakchaure.pdf"
+			download="Anushka_Kulkarni.pdf"
             class="button button-primary"
             >Download Resume</a
           >
@@ -337,18 +340,18 @@
 
               <div class="timeline-header">
                 <h3>Masters's Degree</h3>
-                <p>2023 - 2025</p>
+                <p>2024 - 2026</p>
               </div>
 
               <div class="timeline-content">
                 <h4>
                   <a href="https://kjsce.somaiya.edu/"
-                    >MES IMCC College, Kothrud, Pune</a
+                    >HSBPVT's Parikrama Group of Institutions, Kashti</a
                   >
                 </h4>
                 <p>
                   Pursuing my Master's in Computer Applications (MCA) from
-				  MES IMCC College, Kothrud, Pune.
+				 HSBPVT's Parikrama Group of Institutions, Kashti.
                 </p>
               </div>
             </div>
@@ -578,22 +581,22 @@
         <div class="col-six tab-full pull-right social">
           <ul class="footer-social">
 			<li>
-				<a href="mailto:vaishnav.wakchaure@gmail.com"
+				<a href="mailto:anushka.kulkarni1008@gmail.com"
 				  ><i class="fa fa-envelope"></i
 				></a>
 			  </li>
             <li>
-              <a href="https://www.linkedin.com/in/vaishnav-wakchaure/"
+              <a href="https://www.linkedin.com/in/anushka-kulkarni-5b3b1222b/"
                 ><i class="fa fa-linkedin"></i
               ></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/vaishnav.wakchaure"
+              <a href="https://www.instagram.com/anu_shka__kulkarni"
                 ><i class="fa fa-instagram"></i
               ></a>
             </li>
             <li>
-              <a href="https://github.com/vaishnavw45"
+              <a href="https://github.com/AnushkaK20"
                 ><i class="fa fa-github"></i
               ></a>
             </li>
@@ -608,8 +611,8 @@
             <span>© Copyright 2025 </span>
             <span
               >Design by
-              <a href="https://www.linkedin.com/in/vaishnav-wakchaure/"
-                >Vaishnav Wakchaure</a
+              <a href="https://www.linkedin.com/in/anushka-kulkarni-5b3b1222b/"
+                >Anushka Kulkarni</a
               ></span
             >
           </div>
